<resources>
    <string name="app_name">Pictures Every Day</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите в википедии</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="screen_archive">Archive</string>
    <string name="screen_send">Send</string>

    <string name="settings_name_text">Выбор темы приложения</string>
    <string name="app_theme">App Theme</string>
    <string name="blue_theme">Blue Theme</string>
    <string name="red_theme">Red Theme</string>

    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="the_day_before_yesterday">Позавчера</string>
    <string name="text_error">Unidentified error</string>
    <string name="text_error_not_api_key">You need API key</string>

    <string name="greeting_message">Вас приветствует Pictures Everyday. Для начала работы нажмите здесь!</string>

    <string name="today_fragment_title">Today Title</string>
    <string name="yesterday_fragment_title">Yesterday Title</string>
    <string name="before_yesterday_fragment_title">Before Yesterday Title</string>

    <string name="recycler_header">Заметки</string>
    <string name="screen_notes">Notes</string>
    <string name="default_date_text">Some date</string>
    <string name="default_description_text">Some text</string>
    <string name="input_text">Some Edit Text</string>
</resources>