<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainPictureFragment">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/main_picture_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_bottom_main_picture_fragment"
        android:paddingStart="@dimen/padding_start_main_picture_fragment"
        android:paddingEnd="@dimen/padding_end_main_picture_fragment"
        app:layoutDescription="@xml/motion_scene">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_input_layout"
            android:hint="@string/search_wiki"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_text_input_edit_text"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_text_input_edit_text"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_text_input_edit_text"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_text_input_edit_text"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_wiki"
            app:endIconMode="custom"
            app:helperText="@string/wiki_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_motion_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/greeting_message"
            style="@style/equilateral_image_view_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_view_layout_height"
            android:background="?attr/colorSecondary"
            android:contentDescription="@string/greeting_message"
            android:paddingTop="@dimen/greeting_message_padding_top"
            android:text="@string/greeting_message"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/greeting_message_text_size"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/main_motion_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/main_view_pager"
            style="@style/equilateral_image_view_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_view_layout_height"
            android:contentDescription="@string/photo_of_the_day_stub"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/main_motion_layout"
            app:layout_constraintTop_toBottomOf="@id/main_motion_layout"
            app:srcCompat="@drawable/ic_no_photo" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout" />

        <FrameLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_view_pager"
            tools:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/bottom_app_bar_style"
        app:backgroundTint="?attr/colorPrimary"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="@dimen/cradle_margin_fab"
        app:fabCradleRoundedCornerRadius="@dimen/cradle_rounded_corner_radius_fab"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fab"
        style="@style/fab_style"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="#FFFFFF"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>